--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,72 @@
 .App {
-  text-align: center;
+  max-width: 1200px;
+  width: 95%;
+  margin: 0 auto;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.btn-wrapper {
+  display: flex;
+  justify-content: space-around;
+  margin: 5px;
+  width: 300px;
+}
+
+button,
+.form-submit {
+  outline-style: none;
+  font-weight: bold;
+  line-height: 1.5;
+  width: 100px;
+  border-color: rgba(176, 196, 222, 0.58);
+  border-radius: 5px;
+  background-color: lightsteelblue;
+  box-shadow: 2px 2px 2px lightsteelblue;
+}
+
+button:hover,
+.form-submit:hover {
+  border-color: rgba(135, 206, 250, 0.56);
+  background-color: lightskyblue;
+  box-shadow: 1px 1px 1px lightskyblue;
+}
+
+header {
+  font-weight: bold;
+  line-height: 1.5;
+}
+
+form {
+  display: flex;
+  justify-content: space-around;
+  margin: 5px;
+  width: 400px;
+}
+
+.form-search {
+  outline-style: none;
+  width: 200px;
+  border-radius: 5px;
+  border-color: rgba(176, 196, 222, 0.58);
+}
+.form-search:focus,
+.form-search:hover {
+  border-color: rgba(52, 187, 255, 0.57);
+}
+
+.images-wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+img {
+  object-fit: none;
+  width: calc(100%/3);
+  height: 200px;
+  padding: 2px;
+  box-sizing: border-box;
 }
