--- a/src/App.css
+++ b/src/App.css
@@ -8,27 +8,25 @@
   align-items: center;
 }
 
-.btn-wrapper {
+.container {
   display: flex;
   justify-content: space-around;
   margin: 5px;
   width: 300px;
 }
 
-button,
-.form-submit {
-  outline-style: none;
+button {
+  outline: none;
   font-weight: bold;
   line-height: 1.5;
-  width: 100px;
+  padding: 2px 10px;
   border-color: rgba(176, 196, 222, 0.58);
   border-radius: 5px;
   background-color: lightsteelblue;
   box-shadow: 2px 2px 2px lightsteelblue;
 }
 
-button:hover,
-.form-submit:hover {
+button:hover {
   border-color: rgba(135, 206, 250, 0.56);
   background-color: lightskyblue;
   box-shadow: 1px 1px 1px lightskyblue;
@@ -37,13 +35,6 @@ button:hover,
 header {
   font-weight: bold;
   line-height: 1.5;
-}
-
-form {
-  display: flex;
-  justify-content: space-around;
-  margin: 5px;
-  width: 400px;
 }
 
 .form-search {
@@ -55,6 +46,12 @@ form {
 .form-search:focus,
 .form-search:hover {
   border-color: rgba(52, 187, 255, 0.57);
+}
+
+.btn-wrapper {
+  display: flex;
+  justify-content: space-around;
+  width: 100px;
 }
 
 .images-wrapper {
