--- a/src/App.css
+++ b/src/App.css
@@ -10,9 +10,9 @@
 
 .container {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-evenly;
   margin: 5px;
-  width: 300px;
+  width: 350px;
 }
 
 button {
